yo-ingress-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: yo-istio-ingress
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  template:
      metadata:
        annotations:
          inject.istio.io/templates: gateway
        labels:
          istio: ingressgateway
          app: ingressgateway
          sidecar.istio.io/inject: "true"
      spec:
       serviceAccountName: istio-ingressgateway
       containers:
         - name: istio-proxy
           image: istio/proxyv2:1.26.2
           imagePullPolicy: IfNotPresent
           resources:
              requests:
                cpu: 100m
                memory: 256Mi
              limits:
                cpu: '1'
                memory: 500Mi
