yo-ingress-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: istio-ingressgateway
    namespace: yo-istio-ingress
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8081
    - name: https
      port: 443
  selector:
    istio: ingressgateway
